<resources>
    <string name="app_name">Order Pizza</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="description">Description:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="one">1</string>
    <string name="select_crust">Select Crust</string>
    <string name="add_custom_pizza">Add Custom Pizza</string>
    <string name="select_size">Select Size:</string>
    <string name="cart">Cart</string>
    <string name="remove_item">Remove Item</string>
    <string name="delete_button">Delete_Button</string>
</resources>